# verifile

./: Cargo.toml  LICENSE  mine.ipynb  model.pkl  model.txt  verifications.json
src/: file_ops.rs  gui.rs  hashers.rs  main.rs  models.rs  storage.rs  utils.rs
