[package]
name = "verifile"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.8.2"
iced = { version = "0.13.1", features = ["tokio"] }
md5 = "0.8.0"
rfd = "0.15.4"
sha2 = "0.10.9"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
sha3 = "0.10.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.88"
futures = "0.3.28"
uuid = { version = "1.18.1", features = ["v4"] }
hex = "0.4.3"
chrono = { version = "0.4.42", features = ["serde"] }
